--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -1,1 +1,32 @@
-<p>header works!</p>
+<!-- <nav class="navbar navbar-expand-md p-2" style="background-color:#33424f; color:#ffffff;">
+    <div class="container-fluid">
+      <a class="navbar-brand" routerLink="home"><i class="fa-solid fa-truck-fast fa-xl"></i></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          @if(!status){
+            <li class="nav-item">
+              <a class="nav-link" routerLink="home" routerLinkActive="active">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="login" routerLinkActive="active">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="signup" routerLinkActive="active">SignUp</a>
+            </li>
+          }
+          @else {
+            <li class="nav-item">
+              <a class="nav-link active" routerLink="home" routerLinkActive="active">Home</a>
+            </li>
+            <li style="padding: 8px;">{{userName}}</li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="login" routerLinkActive="active" (click)="onClick()">Logout</a>
+            </li>
+          }
+        </ul>
+      </div>
+    </div>
+  </nav> -->
