--- a/client/src/app/footer/footer.component.html
+++ b/client/src/app/footer/footer.component.html
@@ -1,1 +1,58 @@
-<p>footer works!</p>
+<div class="row">          
+    <div class="col">      
+        <div class="h6">Services &amp; Information</div>
+        <ul>
+            <li>Offices &amp; Local Info</li>
+            <li>Route Finder</li>
+            <li>Containers</li>
+            <li>Vessels</li>
+            <li>Contact</li>
+        </ul>   
+    </div>
+    <div class="col">
+        <div class="h6">Online Business Suite</div>
+        <ul>
+            <li>Quick Quotes</li>
+            <li>Quick Quotes Spot</li>
+            <li>Schedule</li>
+            <li>Booking</li>
+            <li>Tracking</li>
+        </ul>
+    </div>            
+    <div class="col">
+        <div class="h6">Career</div>
+        <ul>
+            <li>Working Ashore</li>
+            <li>Working on Board</li>
+            <li>Vacancies</li>
+            <li>Apprenticeship</li>
+        </ul>
+    </div> 
+    <div class="col"> 
+        <div class="h6">Investor Relations</div>
+        <ul>
+            <li>Overview</li>
+            <li>Share</li>
+            <li>Creditor Relations</li>
+            <li>Publications</li>
+            <li>News &amp; Announcements</li>
+            <li>Online Services for shareholders</li>
+        </ul>    
+    </div>
+    <div class="col">
+        <div class="h6">Find us on</div>
+        <a class="findus-icon"><i class="fa-brands fa-xl fa-square-facebook"></i></a>
+        <a class="findus-icon"><i class="fa-brands fa-xl fa-youtube"></i></a>
+        <a class="findus-icon"><i class="fa-brands fa-xl fa-square-instagram"></i></a>
+        <a class="findus-icon"><i class="fa-brands fa-xl fa-linkedin"></i></a>
+        <a class="findus-icon"><i class="fa-brands fa-xl fa-x-twitter"></i></a>
+        <a class="findus-icon"><i class="fa-brands fa-xl fa-weixin"></i></a>
+        <div class="h6">Get our News</div>
+        <picture>
+            <img src="https://static-cf.hapag-lloyd.com/content/website/en/_jcr_content/footericons/desktop.image.img.transform/footer-teaser/c-1693231503579.jpg/a-1624344215854.jpg/HLAG_Teaser_Newsletter_AS343349376.jpg">
+        </picture> 
+    </div>
+</div>
+<div class="copyright">
+    <p>&copy;All rights reserved 2025</p>
+</div>
