--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,10 +1,10 @@
-<!-- <div>
+<div>
   <app-header/>
   <div style="min-height: 80vh;">
+    <h1 class="text-danger">Welcome to angular</h1>
     <router-outlet></router-outlet>
   </div>
   <div style="margin-top: 30px;">
     <app-footer/>
   </div>
-</div> -->
-<h1 class="text-danger">Welcome to angular</h1>
+</div>
