--- a/client/src/app/header/header.component.css
+++ b/client/src/app/header/header.component.css
@@ -15,3 +15,16 @@ span{
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
     -webkit-tap-highlight-color: #fff;
 }
+.navbar{
+    background-color:#33424f; 
+    color:#ffffff;
+}
+ul{
+    list-style-type: none;
+    display: flex;
+}
+@media screen and (min-width: 360px) {
+    .row {
+      grid-template-columns:1fr;
+    }
+}
