--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -1,12 +1,12 @@
-<!-- <nav class="navbar navbar-expand-md p-2" style="background-color:#33424f; color:#ffffff;">
+<nav class="navbar navbar-expand-md p-2">
     <div class="container-fluid">
       <a class="navbar-brand" routerLink="home"><i class="fa-solid fa-truck-fast fa-xl"></i></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" >
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          @if(!status){
+          <!-- @if(!status){ -->
             <li class="nav-item">
               <a class="nav-link" routerLink="home" routerLinkActive="active">Home</a>
             </li>
@@ -14,10 +14,10 @@
               <a class="nav-link" routerLink="login" routerLinkActive="active">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="signup" routerLinkActive="active">SignUp</a>
+              <a class="nav-link" routerLink="register" routerLinkActive="active">Register</a>
             </li>
-          }
-          @else {
+          <!-- } -->
+          <!-- @else {
             <li class="nav-item">
               <a class="nav-link active" routerLink="home" routerLinkActive="active">Home</a>
             </li>
@@ -25,8 +25,8 @@
             <li class="nav-item">
               <a class="nav-link" routerLink="login" routerLinkActive="active" (click)="onClick()">Logout</a>
             </li>
-          }
+          } -->
         </ul>
       </div>
     </div>
-  </nav> -->
+  </nav>
