--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -16,6 +16,10 @@
             <li class="nav-item">
               <a class="nav-link" routerLink="register" routerLinkActive="active">Register</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="login" routerLinkActive="active" (click)="logout()">Logout</a>
+            </li>
+
           <!-- } -->
           <!-- @else {
             <li class="nav-item">
