--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -6,7 +6,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <!-- @if(!status){ -->
+          @if(!loginStatus){
             <li class="nav-item">
               <a class="nav-link" routerLink="home" routerLinkActive="active">Home</a>
             </li>
@@ -16,20 +16,21 @@
             <li class="nav-item">
               <a class="nav-link" routerLink="register" routerLinkActive="active">Register</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" routerLink="login" routerLinkActive="active" (click)="logout()">Logout</a>
-            </li>
-
-          <!-- } -->
-          <!-- @else {
+          }
+          @else {
             <li class="nav-item">
               <a class="nav-link active" routerLink="home" routerLinkActive="active">Home</a>
             </li>
-            <li style="padding: 8px;">{{userName}}</li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="login" routerLinkActive="active" (click)="onClick()">Logout</a>
+              <a class="nav-link" routerLink="products" routerLinkActive="active">Products</a>
             </li>
-          } -->
+            <li class="nav-item">
+              <a class="nav-link" routerLink="requests" routerLinkActive="active">Requests</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="login" routerLinkActive="active" (click)="logout()">Logout</a>
+            </li>
+          }
         </ul>
       </div>
     </div>
