--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,3 +1,6 @@
-<p>home works!</p>
-<h1 class="text-info">{{loginStatus}}</h1>
-<h1 class="fs-6">{{user | json}}</h1>
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores beatae esse facilis numquam. Eos aut quibusdam fugit quaerat at facilis labore id dicta accusamus odio, deserunt ea ipsum expedita!</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores beatae esse facilis numquam. Eos aut quibusdam fugit quaerat at facilis labore id dicta accusamus odio, deserunt ea ipsum expedita!</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores beatae esse facilis numquam. Eos aut quibusdam fugit quaerat at facilis labore id dicta accusamus odio, deserunt ea ipsum expedita!</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores beatae esse facilis numquam. Eos aut quibusdam fugit quaerat at facilis labore id dicta accusamus odio, deserunt ea ipsum expedita!</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores beatae esse facilis numquam. Eos aut quibusdam fugit quaerat at facilis labore id dicta accusamus odio, deserunt ea ipsum expedita!</p>
