--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,6 @@
 <div>
   <app-header/>
-  <div style="min-height: 80vh;">
-    <h1 class="text-danger">Welcome to angular</h1>
+  <div style="min-height: 80vh; margin-top: 10px;" class="container">
     <router-outlet></router-outlet>
   </div>
   <div style="margin-top: 30px;">
