--- a/client/src/app/importer-details/importer-details.component.css
+++ b/client/src/app/importer-details/importer-details.component.css
@@ -1,5 +1,15 @@
-input{
-    border: 1px solid #000;
+
+div{
+    margin-bottom: 10px;
+}
+form{
+    background-color: #e1e8ed;
+    border-radius: 20px;
+    margin: 50px 50px;
+    padding: 20px 50px;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
 }
 button{
     background-color: #33424f;
