--- a/client/src/app/view/view.component.html
+++ b/client/src/app/view/view.component.html
@@ -1,5 +1,5 @@
-
-<div class="row row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-3">
+@if(role==='buyer'){
+<div class="row">
     @for(machine of products;track machine){
         <div class="col-12">
             <div class="card">
@@ -8,9 +8,29 @@
                   <h5 class="card-title">{{machine?.title}}</h5>
                   <p class="card-text">{{machine?.discription}}</p>
                   <p class="card-text">{{machine?.cost | currency:"INR"}}</p>
-                  <button type="button" class="btn px-2" >View</button>
+                  <button type="button" class="btn px-2" (click)="viewData(machine._id)">View</button>
                 </div>
               </div>
         </div>
     }
 </div>
+}
+@else{
+  <div class="row">
+    @for(machine of products;track machine){
+        <div class="col-12">
+            <div class="card">
+                <img class="card-img-top" src="{{machine?.image}}" alt="Card image cap" width="100px" height="300px">
+                <div class="card-body">
+                  <h5 class="card-title">{{machine?.title}}</h5>
+                  <p class="card-text">{{machine?.discription}}</p>
+                  <p class="card-text">{{machine?.cost | currency:"INR"}}</p>
+                  <button type="button" class="btn px-2" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="editProduct()">edit</button>
+                  <button type="button" class="btn px-2" (click)="removeProduct(machine?._id)">remove</button>
+                </div>
+              </div>
+        </div>
+    }
+    <div class="add-card" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="addProduct()">+</div>
+</div>
+}
