--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,9 +1,12 @@
 <div>
-  <app-header/>
-  <div style="min-height: 80vh; margin-top: 10px;" class="container">
-    <router-outlet></router-outlet>
+  <app-header class="h"/>
+  <div style="min-height: 80vh; margin-top: 10px;" class="container h">
+    <router-outlet  ></router-outlet>
   </div>
   <div style="margin-top: 30px;">
-    <app-footer/>
+    <app-footer  class="h"/>
   </div>
 </div>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
