--- a/client/src/app/footer/footer.component.css
+++ b/client/src/app/footer/footer.component.css
@@ -1,3 +1,8 @@
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
 .row{
     background-color: #e1e8ed;
     padding:30px 10px;
@@ -10,19 +15,19 @@
       grid-template-columns:1fr;
     }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 490px) {
     .row {
       grid-template-columns: 1fr 1fr;
     }
 }
-@media screen and (min-width: 720px) {
+@media screen and (min-width: 780px) {
     .row {
       grid-template-columns: 1fr 1fr 1fr;
     }
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1180px ) {
     .row {
-      grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+      grid-template-columns: auto auto auto auto auto
     }
 }
 a{
