--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,6 +1,26 @@
-
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores beatae esse facilis numquam. Eos aut quibusdam fugit quaerat at facilis labore id dicta accusamus odio, deserunt ea ipsum expedita!</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores beatae esse facilis numquam. Eos aut quibusdam fugit quaerat at facilis labore id dicta accusamus odio, deserunt ea ipsum expedita!</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores beatae esse facilis numquam. Eos aut quibusdam fugit quaerat at facilis labore id dicta accusamus odio, deserunt ea ipsum expedita!</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores beatae esse facilis numquam. Eos aut quibusdam fugit quaerat at facilis labore id dicta accusamus odio, deserunt ea ipsum expedita!</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores beatae esse facilis numquam. Eos aut quibusdam fugit quaerat at facilis labore id dicta accusamus odio, deserunt ea ipsum expedita!</p>
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://us.123rf.com/450wm/jenyateua/jenyateua1809/jenyateua180900080/108901781-wood-timber-construction-material-for-background-and-texture-close-up-stack-of-wooden-bars-small.jpg?ver=6" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="https://img.freepik.com/premium-photo/carpenter-working-wooden-board-his-carpentry-workshop_795422-7018.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="https://us.images.westend61.de/0001214297pw/carpenters-at-work-wooden-table-VPIF01327.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
