--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -4,7 +4,7 @@
 <p class="text-center text-danger p-3">{{message}}</p>
 
 <!-- Form for filling user details -->
-<div class="container" style="width: 40%;">
+<div class="container">
 <form class="form-group" [formGroup]="userCred" (ngSubmit)="userLogin()">
     <div class="mb-2 form-check">
         <input type="radio" formControlName="role" id="buyer" value="buyer" class="form-check-input">
