--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-md p-2">
-    <div class="container-fluid">
+<div class="container-fluid">
+  <nav class="navbar navbar-expand-md px-2 py-3">
       <a class="navbar-brand" routerLink="home"><i class="fa-solid fa-truck-fast fa-xl"></i></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" >
         <span class="navbar-toggler-icon"></span>
@@ -49,5 +49,5 @@
         }
         </ul>
       </div>
-    </div>
-  </nav>
+    </nav>
+  </div>
