--- a/client/src/app/register/register.component.css
+++ b/client/src/app/register/register.component.css
@@ -2,12 +2,35 @@ div{
     margin-bottom: 10px;
 }
 .container{
+    width: 200px;
     background-color: #e1e8ed;
     margin: auto;
-    margin-top: 50px;
+    margin-top: 20px;
     padding: 20px;
     border-radius: 10px;
 }
+
+@media screen and (min-width: 360px) {
+    .container{
+        width:270px ;
+    }
+}
+@media screen and (min-width: 480px) {
+    .container{
+        width: 320px;
+    }
+}
+@media screen and (min-width: 720px) {
+    .container{
+        width: 370px;
+    }
+}
+@media screen and (min-width: 1024px) {
+    .container{
+        width: 450px;
+    }
+}
+
 button{
     background-color: #33424f;
     color: #ffffff;
