--- a/client/src/app/seller-products/seller-products.component.html
+++ b/client/src/app/seller-products/seller-products.component.html
@@ -10,7 +10,7 @@
         </div>
         <div class="modal-body">
           <div class="container my-4 border border-dark p-3 rounded">  
-            <form class="form-group" [formGroup]="productDetails" (ngSubmit)="onSubmitData()">
+            <form class="form-group" [formGroup]="productDetails">
               <div>
                 <label for="title" class="form-label">Title</label>
                 <input type="text" formControlName="title" id="title" class="form-control">
@@ -40,7 +40,7 @@
                 <input type="text" formControlName="sellername" id="sellername" class="form-control" value="{{sellername}}" [disabled]="true">
               </div>
               <div>
-                <button type="submit" class="btn px-3 m-2" *ngIf="showAdd" data-bs-dismiss="modal">Submit</button>
+                <button type="submit" class="btn px-3 m-2" (click)="onSubmitData()" *ngIf="showAdd" data-bs-dismiss="modal">Submit</button>
                 <button type="button" class="btn px-3 m-2" (click)="updateMachinery()" *ngIf="showUpdate" data-bs-dismiss="modal">Update</button>
               </div>
             </form>
