--- a/client/src/app/view/view.component.css
+++ b/client/src/app/view/view.component.css
@@ -2,35 +2,57 @@
     display: grid;
     grid-template-columns: 1fr;
 }
+img{
+  width: 180px;
+  aspect-ratio: 1;
+}
 @media screen and (min-width: 360px) {
     .row {
       grid-template-columns:1fr;
     }
+    img{
+      width: 200px;
+      aspect-ratio: 1;
+    }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 490px) {
     .row {
       grid-template-columns: 1fr 1fr;
     }
+    img{
+      width: 210px;
+      aspect-ratio: 1;
+    }
 }
-@media screen and (min-width: 720px) {
+@media screen and (min-width: 780px) {
     .row {
       grid-template-columns: 1fr 1fr 1fr;
     }
+    img{
+      width: 210px;
+      aspect-ratio: 1;
+    }
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1180px) {
     .row {
-      grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+    img{
+      width: 240px;
+      aspect-ratio: 1;
     }
 }
 
 .add-card{
   height: 400px; 
-  border-radius: 10px ; 
+  border-radius: 10px ;
   background-color: rgb(201, 194, 194);
   font-size:50px ;
   text-align: center;
   padding-top:170px;
   padding-bottom: 170px;  
+  margin-left: 12px;
+  margin-right: 12px;
 }
 
 button{
@@ -40,4 +62,11 @@ button{
 button:hover{
   background-color: #33424f;
   color: #ffffff;
+}
+
+.buttons{
+  display: grid;
+  justify-content: space-between;
+  grid-template-columns: 1fr 1fr;
+  gap: 50px;
 }
