--- a/client/src/app/view/view.component.html
+++ b/client/src/app/view/view.component.html
@@ -3,34 +3,40 @@
     @for(machine of products;track machine){
         <div class="col-12">
             <div class="card">
-                <img class="card-img-top" src="{{machine?.image}}" alt="Card image cap" width="100px" height="300px">
-                <div class="card-body">
-                  <h5 class="card-title">{{machine?.title}}</h5>
-                  <p class="card-text">{{machine?.discription}}</p>
-                  <p class="card-text">{{machine?.cost | currency:"INR"}}</p>
-                  <button type="button" class="btn px-2" (click)="viewData(machine._id)">View</button>
-                </div>
+              <div class="card-img-top p-2">
+                <img src="{{machine?.image}}" alt="Card image cap">
               </div>
+              <div class="card-body">
+                <h5 class="card-title">{{machine?.title}}</h5>
+                <p class="card-text">{{machine?.discription}}</p>
+                <p class="card-text">{{machine?.cost | currency:"INR"}}</p>
+                <button type="button" class="btn px-2" (click)="viewData(machine._id)">View</button>
+              </div>
+            </div>
         </div>
     }
 </div>
 }
 @else{
-  <div class="row">
+  <div class="row mx-auto">
     @for(machine of products;track machine){
         <div class="col-12">
             <div class="card">
-                <img class="card-img-top" src="{{machine?.image}}" alt="Card image cap" width="100px" height="300px">
+              <div class="card-img-top p-2">
+                <img src="{{machine?.image}}" alt="Card image cap">
+              </div>
                 <div class="card-body">
                   <h5 class="card-title">{{machine?.title}}</h5>
                   <p class="card-text">{{machine?.discription}}</p>
                   <p class="card-text">{{machine?.cost | currency:"INR"}}</p>
-                  <button type="button" class="btn px-2" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="editProduct(machine?._id)">edit</button>
-                  <button type="button" class="btn px-2" (click)="removeProduct(machine?._id)">remove</button>
+                  <div class="buttons">
+                    <button type="button" class="btn px-2" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="editProduct(machine?._id)">Edit</button>
+                    <button type="button" class="btn px-2" (click)="removeProduct(machine._id)">Remove</button>
+                  </div>
                 </div>
               </div>
         </div>
     }
     <div class="add-card" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="addProduct()">+</div>
-</div>
+  </div>
 }
