--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <p class="h1 text-center mt-5">Login</p>
 
-<!-- To display message if user already exists -->
+<!-- To display message if user does not exists -->
 <p class="text-center text-danger p-3">{{message}}</p>
 
 <!-- Form for filling user details -->
@@ -36,4 +36,4 @@
     </div>
 </form>
 </div>
-<p class="text-center">Need an account?<a routerLink="signup" (click)="createAccount()">Sign Up</a></p>
+<p class="text-center">Need an account?<a routerLink="signup" (click)="createAccount()">Register</a></p>
