--- a/client/src/app/importer-details/importer-details.component.html
+++ b/client/src/app/importer-details/importer-details.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form class="form-group" [formGroup]="importerDetails" (ngSubmit)="onDetailsFormSubmit()">
+    <form class="form-group container1" [formGroup]="importerDetails" (ngSubmit)="onDetailsFormSubmit()">
         <h2>Importer Details</h2>
         <div>
             <label for="companyName" class="form-label">Company Name:</label>
